AC_INIT(src/main.cc)
AM_INIT_AUTOMAKE(drawtiming,0.7)
AM_CONFIG_HEADER(config.h)
AC_PROG_CC
AC_PROG_CXX
AC_PROG_YACC
AM_PROG_LEX
AC_PROG_INSTALL
AC_CHECK_LIB(gnugetopt, getopt_long)
AC_CHECK_HEADERS(getopt.h)
PKG_CHECK_MODULES([MAGICK], [ImageMagick++])

AC_C_CONST
AC_OUTPUT(Makefile drawtiming.spec src/Makefile doc/Makefile samples/Makefile)
