AC_INIT(src/main.cc)
AM_INIT_AUTOMAKE(drawtiming,0.6.1)
AM_CONFIG_HEADER(config.h)
AC_PROG_CC
AC_PROG_CXX
AC_PROG_YACC
AM_PROG_LEX
AC_PROG_INSTALL
AC_CHECK_LIB(gnugetopt, getopt_long)
AC_CHECK_HEADERS(getopt.h)

# define Magick++ compile flags
MAGICK_CPPFLAGS=$(Magick++-config --cppflags)
MAGICK_CXXFLAGS=$(Magick++-config --cxxflags)
MAGICK_LDFLAGS=$(Magick++-config --ldflags)
MAGICK_LIBS=$(Magick++-config --libs)
AC_SUBST(MAGICK_CPPFLAGS)
AC_SUBST(MAGICK_CXXFLAGS)
AC_SUBST(MAGICK_LDFLAGS)
AC_SUBST(MAGICK_LIBS)

AC_C_CONST
AC_OUTPUT(Makefile drawtiming.spec src/Makefile doc/Makefile samples/Makefile)
