AC_INIT(src/main.cc)
AM_INIT_AUTOMAKE(drawtiming,0.6.2+cairomm)
AM_CONFIG_HEADER(config.h)
AC_PROG_CC
AC_PROG_CXX
AC_PROG_YACC
AM_PROG_LEX
AC_PROG_INSTALL
AC_CHECK_LIB(gnugetopt, getopt_long)
AC_CHECK_HEADERS(getopt.h)

AC_ARG_WITH([cairomm],
    [AS_HELP_STRING([--without-cairomm], [disable support for cairomm])],
    [],
    [with_cairomm=yes])
          
AS_IF([test "x$with_cairomm" != xno],
    [PKG_CHECK_MODULES([CAIROMM], [cairomm-1.0 >= 1.2.0])
     AC_DEFINE([HAVE_CAIROMM], [1], [Define for cairomm rendering])])

# define Magick++ compile flags
MAGICK_CPPFLAGS=$(Magick++-config --cppflags)
MAGICK_CXXFLAGS=$(Magick++-config --cxxflags)
MAGICK_LDFLAGS=$(Magick++-config --ldflags)
MAGICK_LIBS=$(Magick++-config --libs)
AC_SUBST(MAGICK_CPPFLAGS)
AC_SUBST(MAGICK_CXXFLAGS)
AC_SUBST(MAGICK_LDFLAGS)
AC_SUBST(MAGICK_LIBS)

AC_C_CONST
AC_OUTPUT(Makefile drawtiming.spec src/Makefile doc/Makefile samples/Makefile)
